Added Treant Protector

--- a/game/scripts/npc/KV/cardlist.kv
+++ b/game/scripts/npc/KV/cardlist.kv
@@ -74,6 +74,7 @@
 	"70"		"wingfall_hammer"
 	"71"		"jmuy_the_wise"
 	"72"		"juke"
+	"74"		"enchantress"
 	//"72"		"shop_deed"
 	//"73"		"helm_of_the_dominator"
 	//"74"		"cloak_of_endless_carnage"
