--- a/game/scripts/npc/KV/cardlist.kv
+++ b/game/scripts/npc/KV/cardlist.kv
@@ -74,7 +74,9 @@
 	"70"		"wingfall_hammer"
 	"71"		"jmuy_the_wise"
 	"72"		"juke"
+	"73"		"crystal_maiden"
 	"74"		"enchantress"
+	"75"		"treant_protector"
 	//"72"		"shop_deed"
 	//"73"		"helm_of_the_dominator"
 	//"74"		"cloak_of_endless_carnage"
